tests/negative/syntax/unfinished-program/test.smol
package testing;

class Test {
	static main() Unit {
		var x String = "foo";
	}
}

static other() Unit {}